--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -24,7 +24,7 @@ jobs:
               id: snake-gif
         
               with:
-                github_user_name: deep-matter
+                github_user_name: Coolshanlan
                 svg_out_path: dist/github-contribution-grid-snake.svg
             - uses: crazy-max/ghaction-github-pages@v2.1.3
               with:
